@@ -584,8 +584,11 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
             if (lJSON){
                 /* переводим из текста в JSON */
                 lJSON = Util.parseJSON(lJSON);
-                CloudCmd._createFileTable(lPanel, lJSON);
-                CloudCmd._changeLinks(lPanel);
+                
+                CloudCmd.getFileTemplate(function(pTemplate){
+                    CloudCmd._createFileTable(lPanel, lJSON, pTemplate);
+                    CloudCmd._changeLinks(lPanel);
+                 });
             }
             else
                 lRet = true;
@@ -600,8 +603,10 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
                 },
                 
                 success : function(pData){
-                    CloudCmd._createFileTable(lPanel, pData);
-                    CloudCmd._changeLinks(lPanel);
+                    CloudCmd.getFileTemplate(function(pTemplate){
+                        CloudCmd._createFileTable(lPanel, pData, pTemplate);
+                        CloudCmd._changeLinks(lPanel);
+                    });
                     
                     /* переводим таблицу файлов в строку, для   *
                      * сохранения в localStorage                */
@@ -621,26 +626,22 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
      * @param pEleme - родительский элемент
      * @param pJSON  - данные о файлах
      */
-    CloudCmd._createFileTable        = function(pElem, pJSON){
+    CloudCmd._createFileTable        = function(pElem, pJSON, pTemplate){
         var lElem           = DOM.getById(pElem),
             /* getting current element if was refresh */
             lPath           = DOM.getByClass('path', lElem),
             lCurrent        = DOM.getCurrentFile(),
             lName           = DOM.getCurrentName(lName),
             lWasRefresh_b   = lPath[0].textContent === pJSON[0].path;
-        
-        /* говорим построителю,
-         * что бы он в нужный момент
-         * выделил строку с первым файлом
-         */
-        
+                
+       
         /* очищаем панель */
         var i = lElem.childNodes.length;
+        
         while(i--)
             lElem.removeChild(lElem.lastChild);
-        
-        /* заполняем панель новыми элементами */
-        lElem.innerHTML = CloudFunc.buildFromJSON(pJSON);
+          /* заполняем панель новыми элементами */
+        lElem.innerHTML = CloudFunc.buildFromJSON(pJSON, pTemplate);
         
         var lFound;
         /* searching current file */
@@ -662,7 +663,6 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
             lCurrent = lElem.childNodes[2];
             
         DOM.setCurrentFile(lCurrent);
-        
     };
     
     /**
