@@ -295,7 +295,7 @@ var CloudFunc, exports, Util;
      * [{path:'путь',size:'dir'},
      * {name:'имя',size:'размер',mode:'права доступа'}]
      */
-    CloudFunc.buildFromJSON                 = function(pJSON)
+    CloudFunc.buildFromJSON                 = function(pJSON, pTemplate)
     {
         var files = pJSON,
             /* сохраняем путь каталога в котором мы сейчас находимся*/
@@ -348,16 +348,27 @@ var CloudFunc, exports, Util;
             lLink = FS + lDotDot;
             
             /* Сохраняем путь к каталогу верхнего уровня*/
-            lFileTable += '<li draggable class>'                        +
-                            '<span class="mini-icon directory"></span>' +
-                            '<span class=name>'                         +
-                                '<a href="' + lLink                     +
-                                '" draggable=true>' + "..</a>"          +
-                            '</span>'                                   +
-                            '<span class=size>&lt;dir&gt;</span>'       +
-                            '<span class=owner>.</span>'                +
-                            '<span class=mode></span>'                  +
-                        '</li>';
+            
+            if(pTemplate)
+                lFileTable += Util.render(pTemplate,{
+                   type     : 'directory',
+                   link     : lLink,
+                   name     : '..',
+                   size     : '&lt;dir&gt;',
+                   owner    : '.',
+                   mode     : ''
+                });
+            else
+               lFileTable += '<li draggable class>'                        +
+                        '<span class="mini-icon directory"></span>' +
+                        '<span class=name>'                         +
+                            '<a href="' + lLink                     +
+                            '" draggable=true>' + "..</a>"          +
+                        '</span>'                                   +
+                        '<span class=size>&lt;dir&gt;</span>'       +
+                        '<span class=owner>.</span>'                +
+                        '<span class=mode></span>'                  +
+                    '</li>';
         }
         
         for(var i = 1, n = files.length; i < n; i++){
@@ -397,8 +408,6 @@ var CloudFunc, exports, Util;
                             (!lFile.uid ? 'root' : lFile.uid)           +
                             '</span>'                                   +
                             '<span draggable class=mode>'               +
-                            /* конвертируем названия разрешений
-                             * из числового формата в буквенный */
                             CloudFunc.getSymbolicPermissions(lFile.mode)+ 
                             '</span>';
             lFileTable += '</li>';
