@@ -37,7 +37,9 @@ would be on top.
 * Fixed bug with saving json to localStorage, it's always
 writed root directory.
 
-* Moved out set current file from cloudfunc to client.js
+* Moved out set current file from cloudfunc to client.js.
+
+* Changed the way file table building. From now templating used.
 
 
 2012.03.01, Version 0.1.9
